Explore HMM thresholding with dummy data

--- a/picoz-exploration.ipynb
+++ b/picoz-exploration.ipynb
@@ -15,6 +15,7 @@
     "import matplotlib.pyplot as plt\n",
     "import pandas as pd\n",
     "import seaborn as sns\n",
+    "from hmmlearn.hmm import GaussianHMM\n",
     "\n",
     "from AFMReader.topostats import load_topostats\n",
     "\n",
@@ -441,6 +442,7 @@
     "    grains_dictionary: dict,\n",
     "    curvature_threshold_radpernm: float,\n",
     "    height_threshold_iqr_factor: float,\n",
+    "    defect_method: str,\n",
     "    coindicing_defect_distance_threshold_nm: float,\n",
     "    defect_stats_dir: Path,\n",
     "    plot_defects: bool,\n",
@@ -449,6 +451,18 @@
     "    Find defects in height and curvature for each molecule in the grains dictionary.\n",
     "    \"\"\"\n",
     "    new_grains_dictionary = {}\n",
+    "\n",
+    "    if defect_method == \"threshold\":\n",
+    "        all_heights_by_tip = {}\n",
+    "        all_curvatures_by_tip = {}\n",
+    "        for grain_index, grain_data in grains_dictionary.items():\n",
+    "            tip = grain_data[\"tip\"]\n",
+    "            if tip not in all_heights_by_tip:\n",
+    "                all_heights_by_tip[tip] = []\n",
+    "                all_curvatures_by_tip[tip] = []\n",
+    "            for molecule_index, molecule_data in grain_data[\"molecule_data\"].items():\n",
+    "                \n",
+    "\n",
     "    # create a list to store the defect stats\n",
     "    defect_stats_list = []\n",
     "    bad_grains = set()\n",
@@ -465,7 +479,20 @@
     "            cumulative_resampled_distances = molecule_data[\"cumulative_resampled_distances\"]\n",
     "\n",
     "            # Find curvature defects\n",
-    "            curvature_defects_indexes = np.where(np.abs(smoothed_curvatures) > curvature_threshold_radpernm)[0]\n",
+    "            if defect_method == \"threshold\":\n",
+    "                curvature_defects_indexes = np.where(np.abs(smoothed_curvatures) > curvature_threshold_radpernm)[0]\n",
+    "            elif defect_method == \"hmm\":\n",
+    "                # Use HMM to find curvature defects\n",
+    "                # Reshape the data for HMM 2D input: (n_samples, n_features), we are working with 1D data so we reshape it\n",
+    "                # to (n_samples, 1). n_samples is just the number of points in the trace.\n",
+    "                smoothed_curvatures_reshaped = smoothed_curvatures.reshape(-1, 1)\n",
+    "                # Fit the HMM model\n",
+    "                hmm_model_curvature = GaussianHMM(n_components=2, covariance_type=\"diag\", n_iter=1000)\n",
+    "                hmm_model_curvature.fit(smoothed_curvatures_reshaped)\n",
+    "                # Predict the state for each point\n",
+    "                curvature_states = hmm_model_curvature.predict(smoothed_curvatures_reshaped)\n",
+    "                # Grab the indexes of curvature defects\n",
+    "                curvature_defects_indexes = np.where(curvature_states == 1)[0]\n",
     "\n",
     "            # Find height defects\n",
     "            median_height = np.median(resampled_heights)\n",
@@ -729,6 +756,74 @@
     ")\n",
     "plt.xlabel(\"Dose (Gy)\")\n",
     "plt.ylabel(\"Number of Height Defects\")\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "00997adf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# random state\n",
+    "np.random.seed(1)\n",
+    "X1 = np.random.rand(20) + 20\n",
+    "X2 = np.random.rand(20) + 20\n",
+    "X1 = np.array(X1)\n",
+    "X2 = np.array(X2)\n",
+    "\n",
+    "# Add a defect into X2\n",
+    "X2_with_defect = X2.copy()\n",
+    "X2_with_defect[10:12] -= 1.8\n",
+    "X2_with_defect[15:17] -= 5\n",
+    "\n",
+    "plt.plot(X2, \".-\", label=\"sample x2 without defect\", c=\"orange\")\n",
+    "plt.plot(X2_with_defect, \".-\", label=\"sample x2 with defect\", c=\"cornflowerblue\")\n",
+    "model_x2 = GaussianHMM(n_components=2, covariance_type=\"diag\", n_iter=1000)\n",
+    "predicted_states_x2 = model_x2.fit(X2.reshape(-1, 1)).predict(X2.reshape(-1, 1))\n",
+    "model_x2_with_defect = GaussianHMM(n_components=2, covariance_type=\"diag\", n_iter=1000)\n",
+    "model_x2_with_defect.fit(X2_with_defect.reshape(-1, 1))\n",
+    "predicted_states_x2_with_defect = model_x2_with_defect.predict(X2_with_defect.reshape(-1, 1))\n",
+    "\n",
+    "plt.plot(predicted_states_x2, \".-\", label=\"Predicted States x2\", c=\"orange\", alpha=0.5)\n",
+    "plt.plot(\n",
+    "    predicted_states_x2_with_defect + 2, \".-\", label=\"Predicted States x2 with defect\", c=\"cornflowerblue\", alpha=0.5\n",
+    ")\n",
+    "plt.ylim(-1, np.max(X2) + 1)\n",
+    "plt.legend()\n",
+    "plt.title(\"HMM forces itself to find defects even when none are present.\")\n",
+    "plt.show()\n",
+    "\n",
+    "\n",
+    "combined_no_defects = np.concatenate((X1, X2))\n",
+    "combined_with_defects = np.concatenate((X1, X2_with_defect))\n",
+    "\n",
+    "model_combined_no_defects = GaussianHMM(n_components=2, covariance_type=\"diag\", n_iter=1000)\n",
+    "model_combined_no_defects.fit(combined_no_defects.reshape(-1, 1))\n",
+    "predicted_states_combined_no_defects = model_combined_no_defects.predict(combined_no_defects.reshape(-1, 1))\n",
+    "model_combined_with_defects = GaussianHMM(n_components=2, covariance_type=\"diag\", n_iter=1000)\n",
+    "model_combined_with_defects.fit(combined_with_defects.reshape(-1, 1))\n",
+    "predicted_states_combined_with_defects = model_combined_with_defects.predict(combined_with_defects.reshape(-1, 1))\n",
+    "\n",
+    "plt.figure(figsize=(10, 5))\n",
+    "plt.plot(combined_no_defects, \".-\", label=\"Combined No Defects\", c=\"orange\")\n",
+    "plt.plot(combined_with_defects, \".-\", label=\"Combined With Defects\", c=\"cornflowerblue\")\n",
+    "plt.plot(\n",
+    "    predicted_states_combined_no_defects, \".-\", label=\"Predicted States Combined No Defects\", c=\"orange\", alpha=0.5\n",
+    ")\n",
+    "plt.plot(\n",
+    "    predicted_states_combined_with_defects + 2,\n",
+    "    \".-\",\n",
+    "    label=\"Predicted States Combined With Defects\",\n",
+    "    c=\"cornflowerblue\",\n",
+    "    alpha=0.5,\n",
+    ")\n",
+    "plt.ylim(-1, np.max(combined_no_defects) + 1)\n",
+    "plt.legend()\n",
+    "plt.title(\n",
+    "    \"Concatenated data with at least one real defect can make HMM behave.\\nBut total absense of defects forces it to find false defects.\"\n",
+    ")\n",
     "plt.show()"
    ]
   }
