--- a/picoz-exploration.ipynb
+++ b/picoz-exploration.ipynb
@@ -442,6 +442,10 @@
     "    grains_dictionary: dict,\n",
     "    curvature_threshold_radpernm: float,\n",
     "    height_threshold_iqr_factor: float,\n",
+    "    height_threshold_abs: float,\n",
+    "    curvature_threshold_iqr_factor: float,\n",
+    "    defect_curvature_threshold_method: str,\n",
+    "    defect_height_threshold_methold: str,\n",
     "    defect_method: str,\n",
     "    coindicing_defect_distance_threshold_nm: float,\n",
     "    defect_stats_dir: Path,\n",
@@ -453,15 +457,46 @@
     "    new_grains_dictionary = {}\n",
     "\n",
     "    if defect_method == \"threshold\":\n",
-    "        all_heights_by_tip = {}\n",
-    "        all_curvatures_by_tip = {}\n",
-    "        for grain_index, grain_data in grains_dictionary.items():\n",
-    "            tip = grain_data[\"tip\"]\n",
-    "            if tip not in all_heights_by_tip:\n",
-    "                all_heights_by_tip[tip] = []\n",
-    "                all_curvatures_by_tip[tip] = []\n",
-    "            for molecule_index, molecule_data in grain_data[\"molecule_data\"].items():\n",
-    "                \n",
+    "        # calculate curvature threshold\n",
+    "        if defect_curvature_threshold_method == \"per_tip_median_iqr\":\n",
+    "            all_curvatures_by_tip = {}\n",
+    "            curvature_thresholds_by_tip = {}\n",
+    "            for grain_index, grain_data in grains_dictionary.items():\n",
+    "                tip = grain_data[\"tip\"]\n",
+    "                if tip not in all_curvatures_by_tip:\n",
+    "                    all_curvatures_by_tip[tip] = []\n",
+    "                for molecule_index, molecule_data in grain_data[\"molecule_data\"].items():\n",
+    "                    smoothed_curvatures = molecule_data[\"smoothed_curvatures\"]\n",
+    "                    all_curvatures_by_tip[tip].extend(smoothed_curvatures)\n",
+    "            for tip, all_curvatures_for_tip in all_curvatures_by_tip.items():\n",
+    "                all_curvatures_for_tip = np.array(all_curvatures_for_tip)\n",
+    "                median_curvature = np.median(all_curvatures_for_tip)\n",
+    "                q75, q25 = np.percentile(all_curvatures_for_tip, [75, 25])\n",
+    "                iqr = q75 - q25\n",
+    "                curvature_threshold_radpernm = median_curvature + curvature_threshold_iqr_factor * iqr\n",
+    "        elif defect_curvature_threshold_method == \"abs\":\n",
+    "            curvature_threshold_radpernm = curvature_threshold_radpernm\n",
+    "\n",
+    "        # calculate height threshold\n",
+    "        if defect_height_threshold_methold == \"per_tip_median_iqr\":\n",
+    "            all_heights_by_tip = {}\n",
+    "            height_thresholds_by_tip = {}\n",
+    "            for grain_index, grain_data in grains_dictionary.items():\n",
+    "                tip = grain_data[\"tip\"]\n",
+    "                if tip not in all_heights_by_tip:\n",
+    "                    all_heights_by_tip[tip] = []\n",
+    "                for molecule_index, molecule_data in grain_data[\"molecule_data\"].items():\n",
+    "                    resampled_heights = molecule_data[\"resampled_heights\"]\n",
+    "                    all_heights_by_tip[tip].extend(resampled_heights)\n",
+    "            for tip, heights in all_heights_by_tip.items():\n",
+    "                heights = np.array(heights)\n",
+    "                median_height = np.median(heights)\n",
+    "                q75, q25 = np.percentile(heights, [75, 25])\n",
+    "                iqr = q75 - q25\n",
+    "                height_threshold_nm = median_height - height_threshold_iqr_factor * iqr\n",
+    "                height_thresholds_by_tip[tip] = height_threshold_nm\n",
+    "        elif defect_height_threshold_methold == \"abs\":\n",
+    "            height_threshold_nm = height_threshold_abs\n",
     "\n",
     "    # create a list to store the defect stats\n",
     "    defect_stats_list = []\n",
