--- a/picoz-exploration.ipynb
+++ b/picoz-exploration.ipynb
@@ -438,11 +438,28 @@
     "    return new_grains_dictionary\n",
     "\n",
     "\n",
+    "def fetch_all_curvatures_by_tip(\n",
+    "    grains_dictionary: dict,\n",
+    ") -> dict[int, list[float]]:\n",
+    "    \"\"\"\n",
+    "    Fetch all curvatures by tip from the grains dictionary.\n",
+    "    \"\"\"\n",
+    "    all_curvatures_by_tip = {}\n",
+    "    for grain_index, grain_data in grains_dictionary.items():\n",
+    "        tip = grain_data[\"tip\"]\n",
+    "        if tip not in all_curvatures_by_tip:\n",
+    "            all_curvatures_by_tip[tip] = []\n",
+    "        for molecule_index, molecule_data in grain_data[\"molecule_data\"].items():\n",
+    "            smoothed_curvatures = molecule_data[\"smoothed_curvatures\"]\n",
+    "            all_curvatures_by_tip[tip].extend(smoothed_curvatures)\n",
+    "    return all_curvatures_by_tip\n",
+    "\n",
+    "\n",
     "def find_defects_in_height_and_curvature(\n",
     "    grains_dictionary: dict,\n",
-    "    curvature_threshold_radpernm: float,\n",
+    "    curvature_threshold_abs_radpernm: float,\n",
     "    height_threshold_iqr_factor: float,\n",
-    "    height_threshold_abs: float,\n",
+    "    height_threshold_abs_nm: float,\n",
     "    curvature_threshold_iqr_factor: float,\n",
     "    defect_curvature_threshold_method: str,\n",
     "    defect_height_threshold_methold: str,\n",
@@ -474,8 +491,9 @@
     "                q75, q25 = np.percentile(all_curvatures_for_tip, [75, 25])\n",
     "                iqr = q75 - q25\n",
     "                curvature_threshold_radpernm = median_curvature + curvature_threshold_iqr_factor * iqr\n",
+    "                curvature_thresholds_by_tip[tip] = curvature_threshold_radpernm\n",
     "        elif defect_curvature_threshold_method == \"abs\":\n",
-    "            curvature_threshold_radpernm = curvature_threshold_radpernm\n",
+    "            curvature_threshold_abs_radpernm = curvature_threshold_abs_radpernm\n",
     "\n",
     "        # calculate height threshold\n",
     "        if defect_height_threshold_methold == \"per_tip_median_iqr\":\n",
@@ -496,7 +514,7 @@
     "                height_threshold_nm = median_height - height_threshold_iqr_factor * iqr\n",
     "                height_thresholds_by_tip[tip] = height_threshold_nm\n",
     "        elif defect_height_threshold_methold == \"abs\":\n",
-    "            height_threshold_nm = height_threshold_abs\n",
+    "            height_threshold_nm = height_threshold_abs_nm\n",
     "\n",
     "    # create a list to store the defect stats\n",
     "    defect_stats_list = []\n",
@@ -515,19 +533,7 @@
     "\n",
     "            # Find curvature defects\n",
     "            if defect_method == \"threshold\":\n",
-    "                curvature_defects_indexes = np.where(np.abs(smoothed_curvatures) > curvature_threshold_radpernm)[0]\n",
-    "            elif defect_method == \"hmm\":\n",
-    "                # Use HMM to find curvature defects\n",
-    "                # Reshape the data for HMM 2D input: (n_samples, n_features), we are working with 1D data so we reshape it\n",
-    "                # to (n_samples, 1). n_samples is just the number of points in the trace.\n",
-    "                smoothed_curvatures_reshaped = smoothed_curvatures.reshape(-1, 1)\n",
-    "                # Fit the HMM model\n",
-    "                hmm_model_curvature = GaussianHMM(n_components=2, covariance_type=\"diag\", n_iter=1000)\n",
-    "                hmm_model_curvature.fit(smoothed_curvatures_reshaped)\n",
-    "                # Predict the state for each point\n",
-    "                curvature_states = hmm_model_curvature.predict(smoothed_curvatures_reshaped)\n",
-    "                # Grab the indexes of curvature defects\n",
-    "                curvature_defects_indexes = np.where(curvature_states == 1)[0]\n",
+    "                curvature_defects_indexes = np.where(np.abs(smoothed_curvatures) > curvature_threshold_abs_radpernm)[0]\n",
     "\n",
     "            # Find height defects\n",
     "            median_height = np.median(resampled_heights)\n",
@@ -625,7 +631,7 @@
     "                ax[0, 0].set_xlabel(\"Distance (nm)\")\n",
     "                ax[0, 0].set_ylabel(\"Curvature (1/nm)\")\n",
     "                ax[0, 0].hlines(\n",
-    "                    [curvature_threshold_radpernm, -curvature_threshold_radpernm],\n",
+    "                    [curvature_threshold_abs_radpernm, -curvature_threshold_abs_radpernm],\n",
     "                    0,\n",
     "                    cumulative_resampled_distances[-1],\n",
     "                    color=\"k\",\n",
@@ -699,7 +705,7 @@
     "print(\"finding defects in height and curvature\")\n",
     "grains_dictionary_defects, defect_stats_df = find_defects_in_height_and_curvature(\n",
     "    grains_dictionary=grains_dictionary_resampled,\n",
-    "    curvature_threshold_radpernm=curvature_threshold_radpernm,\n",
+    "    curvature_threshold_abs_radpernm=curvature_threshold_radpernm,\n",
     "    height_threshold_iqr_factor=height_threshold_iqr_factor,\n",
     "    coindicing_defect_distance_threshold_nm=coindicing_defect_distance_threshold_nm,\n",
     "    defect_stats_dir=defect_stats_dir,\n",
