--- a/picoz-exploration.ipynb
+++ b/picoz-exploration.ipynb
@@ -454,6 +454,22 @@
     "            all_curvatures_by_tip[tip].extend(smoothed_curvatures)\n",
     "    return all_curvatures_by_tip\n",
     "\n",
+    "def fetch_all_heights_by_tip(\n",
+    "    grains_dictionary: dict,\n",
+    ") -> dict[int, list[float]]:\n",
+    "    \"\"\"\n",
+    "    Fetch all heights by tip from the grains dictionary.\n",
+    "    \"\"\"\n",
+    "    all_heights_by_tip = {}\n",
+    "    for grain_index, grain_data in grains_dictionary.items():\n",
+    "        tip = grain_data[\"tip\"]\n",
+    "        if tip not in all_heights_by_tip:\n",
+    "            all_heights_by_tip[tip] = []\n",
+    "        for molecule_index, molecule_data in grain_data[\"molecule_data\"].items():\n",
+    "            resampled_heights = molecule_data[\"resampled_heights\"]\n",
+    "            all_heights_by_tip[tip].extend(resampled_heights)\n",
+    "    return all_heights_by_tip\n",
+    "\n",
     "\n",
     "def find_defects_in_height_and_curvature(\n",
     "    grains_dictionary: dict,\n",
