Add median_iqr_threshold calculation

--- a/picoz-exploration.ipynb
+++ b/picoz-exploration.ipynb
@@ -454,6 +454,7 @@
     "            all_curvatures_by_tip[tip].extend(smoothed_curvatures)\n",
     "    return all_curvatures_by_tip\n",
     "\n",
+    "\n",
     "def fetch_all_heights_by_tip(\n",
     "    grains_dictionary: dict,\n",
     ") -> dict[int, list[float]]:\n",
@@ -469,6 +470,20 @@
     "            resampled_heights = molecule_data[\"resampled_heights\"]\n",
     "            all_heights_by_tip[tip].extend(resampled_heights)\n",
     "    return all_heights_by_tip\n",
+    "\n",
+    "\n",
+    "def median_iqr_threshold(\n",
+    "    values: npt.NDArray[np.float64],\n",
+    "    iqr_factor: float,\n",
+    ") -> float:\n",
+    "    \"\"\"\n",
+    "    Calculate the median IQR threshold for a set of values.\n",
+    "    \"\"\"\n",
+    "    median_value = np.median(values)\n",
+    "    q75, q25 = np.percentile(values, [75, 25])\n",
+    "    iqr = q75 - q25\n",
+    "    threshold = median_value + iqr_factor * iqr\n",
+    "    return threshold\n",
     "\n",
     "\n",
     "def find_defects_in_height_and_curvature(\n",
@@ -492,43 +507,25 @@
     "    if defect_method == \"threshold\":\n",
     "        # calculate curvature threshold\n",
     "        if defect_curvature_threshold_method == \"per_tip_median_iqr\":\n",
-    "            all_curvatures_by_tip = {}\n",
     "            curvature_thresholds_by_tip = {}\n",
-    "            for grain_index, grain_data in grains_dictionary.items():\n",
-    "                tip = grain_data[\"tip\"]\n",
-    "                if tip not in all_curvatures_by_tip:\n",
-    "                    all_curvatures_by_tip[tip] = []\n",
-    "                for molecule_index, molecule_data in grain_data[\"molecule_data\"].items():\n",
-    "                    smoothed_curvatures = molecule_data[\"smoothed_curvatures\"]\n",
-    "                    all_curvatures_by_tip[tip].extend(smoothed_curvatures)\n",
+    "            all_curvatures_by_tip = fetch_all_curvatures_by_tip(grains_dictionary)\n",
     "            for tip, all_curvatures_for_tip in all_curvatures_by_tip.items():\n",
     "                all_curvatures_for_tip = np.array(all_curvatures_for_tip)\n",
-    "                median_curvature = np.median(all_curvatures_for_tip)\n",
-    "                q75, q25 = np.percentile(all_curvatures_for_tip, [75, 25])\n",
-    "                iqr = q75 - q25\n",
-    "                curvature_threshold_radpernm = median_curvature + curvature_threshold_iqr_factor * iqr\n",
-    "                curvature_thresholds_by_tip[tip] = curvature_threshold_radpernm\n",
+    "                curvature_thresholds_by_tip[tip] = median_iqr_threshold(\n",
+    "                    values=all_curvatures_for_tip, iqr_factor=curvature_threshold_iqr_factor\n",
+    "                )\n",
     "        elif defect_curvature_threshold_method == \"abs\":\n",
     "            curvature_threshold_abs_radpernm = curvature_threshold_abs_radpernm\n",
     "\n",
     "        # calculate height threshold\n",
     "        if defect_height_threshold_methold == \"per_tip_median_iqr\":\n",
-    "            all_heights_by_tip = {}\n",
     "            height_thresholds_by_tip = {}\n",
-    "            for grain_index, grain_data in grains_dictionary.items():\n",
-    "                tip = grain_data[\"tip\"]\n",
-    "                if tip not in all_heights_by_tip:\n",
-    "                    all_heights_by_tip[tip] = []\n",
-    "                for molecule_index, molecule_data in grain_data[\"molecule_data\"].items():\n",
-    "                    resampled_heights = molecule_data[\"resampled_heights\"]\n",
-    "                    all_heights_by_tip[tip].extend(resampled_heights)\n",
+    "            all_heights_by_tip = fetch_all_heights_by_tip(grains_dictionary)\n",
     "            for tip, heights in all_heights_by_tip.items():\n",
     "                heights = np.array(heights)\n",
-    "                median_height = np.median(heights)\n",
-    "                q75, q25 = np.percentile(heights, [75, 25])\n",
-    "                iqr = q75 - q25\n",
-    "                height_threshold_nm = median_height - height_threshold_iqr_factor * iqr\n",
-    "                height_thresholds_by_tip[tip] = height_threshold_nm\n",
+    "                height_thresholds_by_tip[tip] = median_iqr_threshold(\n",
+    "                    values=heights, iqr_factor=height_threshold_iqr_factor\n",
+    "                )\n",
     "        elif defect_height_threshold_methold == \"abs\":\n",
     "            height_threshold_nm = height_threshold_abs_nm\n",
     "\n",
