Break out finding curvature defects into its own function

--- a/picoz-exploration.ipynb
+++ b/picoz-exploration.ipynb
@@ -486,6 +486,70 @@
     "    return threshold\n",
     "\n",
     "\n",
+    "def count_defects_in_binary_array(\n",
+    "    binary_array: npt.NDArray[np.bool_],\n",
+    ") -> int:\n",
+    "    \"\"\"\n",
+    "    Count the number of defect regions in a binary array.\n",
+    "    A defect region is defined as a contiguous sequence of True values.\n",
+    "    \"\"\"\n",
+    "    num_defects = 0\n",
+    "    if np.all(binary_array == True):\n",
+    "        # if the whole array is a defect, we have one defect, this is weird and shouldn't really happen but we can\n",
+    "        # handle this later\n",
+    "        return 1\n",
+    "    for i in range(1, len(binary_array)):\n",
+    "        if binary_array[i] and not binary_array[i - 1]:\n",
+    "            num_defects += 1\n",
+    "    return num_defects\n",
+    "\n",
+    "def find_curvature_defects(\n",
+    "    grains_dictionary: dict,\n",
+    "    defect_method: str,\n",
+    "    curvature_threshold_abs_radpernm: float,\n",
+    "    curvature_threshold_iqr_factor: float,\n",
+    ") -> dict:\n",
+    "    \"\"\"Find curvature defects in grains.\"\"\"\n",
+    "    new_grains_dictionary = {}\n",
+    "    if defect_method == \"threshold_iqr\":\n",
+    "        # calculate curvature threshold\n",
+    "        curvature_thresholds_by_tip = {}\n",
+    "        all_curvatures_by_tip = fetch_all_curvatures_by_tip(grains_dictionary)\n",
+    "        for tip, all_curvatures_for_tip in all_curvatures_by_tip.items():\n",
+    "            all_curvatures_for_tip = np.array(all_curvatures_for_tip)\n",
+    "            curvature_thresholds_by_tip[tip] = median_iqr_threshold(\n",
+    "                values=all_curvatures_for_tip, iqr_factor=curvature_threshold_iqr_factor\n",
+    "            )\n",
+    "        # find curvature defects\n",
+    "        for grain_index, grain_data in grains_dictionary.items():\n",
+    "            tip = grain_data[\"tip\"]\n",
+    "            total_curvature_defects_grain = 0\n",
+    "            for molecule_index, molecule_data in grain_data[\"molecule_data\"].items():\n",
+    "                smoothed_curvatures = molecule_data[\"smoothed_curvatures\"]\n",
+    "                curvature_defects_bool = np.abs(smoothed_curvatures) > curvature_thresholds_by_tip[tip]\n",
+    "                total_curvature_defects_grain += count_defects_in_binary_array(binary_array=curvature_defects_bool)\n",
+    "                molecule_data[\"curvature_defects_bool\"] = curvature_defects_bool\n",
+    "\n",
+    "            # Add stats to grain data\n",
+    "            grain_data[\"num_curvature_defects\"] = total_curvature_defects_grain\n",
+    "            new_grains_dictionary[grain_index] = grain_data\n",
+    "\n",
+    "    elif defect_method == \"threshold_abs\":\n",
+    "            # find curvature defects\n",
+    "            for grain_index, grain_data in grains_dictionary.items():\n",
+    "                total_curvature_defects_grain = 0\n",
+    "                for molecule_index, molecule_data in grain_data[\"molecule_data\"].items():\n",
+    "                    smoothed_curvatures = molecule_data[\"smoothed_curvatures\"]\n",
+    "                    curvature_defects_bool = np.abs(smoothed_curvatures) > curvature_threshold_abs_radpernm\n",
+    "                    total_curvature_defects_grain += count_defects_in_binary_array(binary_array=curvature_defects_bool)\n",
+    "                    molecule_data[\"curvature_defects_bool\"] = curvature_defects_bool\n",
+    "\n",
+    "                # Add stats to grain data\n",
+    "                grain_data[\"num_curvature_defects\"] = total_curvature_defects_grain\n",
+    "                new_grains_dictionary[grain_index] = grain_data\n",
+    "    else:\n",
+    "        raise ValueError(f\"defect_method {defect_method} not supported\")\n",
+    "\n",
     "def find_defects_in_height_and_curvature(\n",
     "    grains_dictionary: dict,\n",
     "    curvature_threshold_abs_radpernm: float,\n",
@@ -504,18 +568,7 @@
     "    \"\"\"\n",
     "    new_grains_dictionary = {}\n",
     "\n",
-    "    if defect_method == \"threshold\":\n",
-    "        # calculate curvature threshold\n",
-    "        if defect_curvature_threshold_method == \"per_tip_median_iqr\":\n",
-    "            curvature_thresholds_by_tip = {}\n",
-    "            all_curvatures_by_tip = fetch_all_curvatures_by_tip(grains_dictionary)\n",
-    "            for tip, all_curvatures_for_tip in all_curvatures_by_tip.items():\n",
-    "                all_curvatures_for_tip = np.array(all_curvatures_for_tip)\n",
-    "                curvature_thresholds_by_tip[tip] = median_iqr_threshold(\n",
-    "                    values=all_curvatures_for_tip, iqr_factor=curvature_threshold_iqr_factor\n",
-    "                )\n",
-    "        elif defect_curvature_threshold_method == \"abs\":\n",
-    "            curvature_threshold_abs_radpernm = curvature_threshold_abs_radpernm\n",
+    "\n",
     "\n",
     "        # calculate height threshold\n",
     "        if defect_height_threshold_methold == \"per_tip_median_iqr\":\n",
