[STABLE] finish refactor, using tip-based median IQR thresholding

--- a/picoz-exploration.ipynb
+++ b/picoz-exploration.ipynb
@@ -512,7 +512,7 @@
     ") -> dict:\n",
     "    \"\"\"Find curvature defects in grains.\"\"\"\n",
     "    new_grains_dictionary = {}\n",
-    "    if defect_method == \"threshold_iqr\":\n",
+    "    if defect_method == \"per_tip_median_iqr\":\n",
     "        # calculate curvature threshold\n",
     "        curvature_thresholds_by_tip = {}\n",
     "        all_curvatures_by_tip = fetch_all_curvatures_by_tip(grains_dictionary=grains_dictionary)\n",
@@ -789,28 +789,34 @@
     "    curvature_average_window_nm=curvature_average_window_nm,\n",
     ")\n",
     "\n",
-    "#### <----------------- LEFT OFF HERE, NEED TO FIX THE BELOW FUNCTION CALL\n",
+    "# Find defects in height and curvature\n",
+    "curvature_defect_method = \"per_tip_median_iqr\"\n",
+    "curvature_threshold_abs_radpernm = 0.15  # rad/nm\n",
+    "curvature_threshold_iqr_factor = 3.0  # IQR factor for curvature threshold\n",
+    "height_defect_method = \"per_tip_median_iqr\"\n",
+    "height_threshold_iqr_factor = 3.0  # IQR factor for height threshold\n",
+    "height_threshold_abs_nm = 10.0  # nm, absolute height threshold\n",
+    "coindicing_defect_distance_threshold_nm = 10.0  # nm, distance threshold for coinciding defects\n",
+    "print(\"finding defects in height and curvature\")\n",
+    "grains_dictionary_defects, defect_stats_df = find_defects_in_height_and_curvature(\n",
+    "    grains_dictionary=grains_dictionary_resampled,\n",
+    "    curvature_defect_method=curvature_defect_method,\n",
+    "    curvature_threshold_abs_radpernm=curvature_threshold_abs_radpernm,\n",
+    "    curvature_threshold_iqr_factor=curvature_threshold_iqr_factor,\n",
+    "    height_defect_method=height_defect_method,\n",
+    "    height_threshold_iqr_factor=height_threshold_iqr_factor,\n",
+    "    height_threshold_abs_nm=height_threshold_abs_nm,\n",
+    "    coindicing_defect_distance_threshold_nm=coindicing_defect_distance_threshold_nm,\n",
+    "    defect_stats_dir=defect_stats_dir,\n",
+    "    plot_defects=True,\n",
+    ")\n",
     "\n",
-    "# # find defects in height and curvature\n",
-    "# curvature_threshold_radpernm = 0.15  # rad/nm\n",
-    "# height_threshold_iqr_factor = 3.0  # IQR factor for height threshold\n",
-    "# coindicing_defect_distance_threshold_nm = 10.0  # nm, distance threshold for coinciding defects\n",
-    "# print(\"finding defects in height and curvature\")\n",
-    "# grains_dictionary_defects, defect_stats_df = find_defects_in_height_and_curvature(\n",
-    "#     grains_dictionary=grains_dictionary_resampled,\n",
-    "#     curvature_threshold_abs_radpernm=curvature_threshold_radpernm,\n",
-    "#     height_threshold_iqr_factor=height_threshold_iqr_factor,\n",
-    "#     coindicing_defect_distance_threshold_nm=coindicing_defect_distance_threshold_nm,\n",
-    "#     defect_stats_dir=defect_stats_dir,\n",
-    "#     plot_defects=False,\n",
-    "# )\n",
+    "# save the defect stats to a csv\n",
+    "defect_stats_df.to_csv(defect_stats_dir / \"defect_stats.csv\", index=False)\n",
     "\n",
-    "# # save the defect stats to a csv\n",
-    "# defect_stats_df.to_csv(defect_stats_dir / \"defect_stats.csv\", index=False)\n",
-    "\n",
-    "# # pickle the dictionary\n",
-    "# with open(defect_stats_dir / \"grains_defects_stats_dictionary.pickle\", \"wb\") as f:\n",
-    "#     pickle.dump(grains_dictionary_defects, f)"
+    "# pickle the dictionary\n",
+    "with open(defect_stats_dir / \"grains_defects_stats_dictionary.pickle\", \"wb\") as f:\n",
+    "    pickle.dump(grains_dictionary_defects, f)"
    ]
   },
   {
@@ -890,7 +896,19 @@
     ")\n",
     "plt.xlabel(\"Dose (Gy)\")\n",
     "plt.ylabel(\"Number of Height Defects\")\n",
-    "plt.show()"
+    "plt.show()\n",
+    "\n",
+    "# dose vs number of coinciding defects\n",
+    "sns.stripplot(data=defect_stats_df, x=\"dose\", y=\"num_coinciding_defects\", color=\"black\", alpha=0.5)\n",
+    "sns.violinplot(\n",
+    "    data=defect_stats_df,\n",
+    "    x=\"dose\",\n",
+    "    y=\"num_coinciding_defects\",\n",
+    "    color=\"lightgrey\",\n",
+    ")\n",
+    "plt.xlabel(\"Dose (Gy)\")\n",
+    "plt.ylabel(\"Number of Coinciding Defects\")\n",
+    "plt.show()\n"
    ]
   },
   {
