Skip grains that are erroneously short

--- a/picoz-exploration.ipynb
+++ b/picoz-exploration.ipynb
@@ -165,6 +165,8 @@
     "):\n",
     "    grains_dictionary: dict[any] = {}\n",
     "\n",
+    "    bad_grains: list[tuple[int, str, str]] = []\n",
+    "\n",
     "    loadscans = LoadScans(file_list, channel=\"dummy\")\n",
     "    loadscans.get_data()\n",
     "    img_dict = loadscans.img_dict\n",
@@ -215,6 +217,14 @@
     "                smallest_bounding_area = all_stats_grain[\"smallest_bounding_area\"].values[0]\n",
     "                aspect_ratio = all_stats_grain[\"aspect_ratio\"].values[0]\n",
     "                total_contour_length = all_stats_grain[\"total_contour_length\"].values[0]\n",
+    "\n",
+    "                if total_contour_length < 300:\n",
+    "                    print(\n",
+    "                        f\"skipping grain {current_grain_index} in file {filename} because total contour length is too small: {total_contour_length}\"\n",
+    "                    )\n",
+    "                    bad_grains.append((grain_index, filename, \"contour length too small\"))\n",
+    "                    continue\n",
+    "\n",
     "                num_crossings = all_stats_grain[\"num_crossings\"].values[0]\n",
     "\n",
     "                # print(f\"  grain {current_grain_index}\")\n",
@@ -349,6 +359,9 @@
     "            plt.show()\n",
     "\n",
     "    print(f\"found {len(grains_dictionary)} grains in {len(file_list)} images\")\n",
+    "\n",
+    "    for bad_grain in bad_grains:\n",
+    "        print(f\"bad grain {bad_grain[0]} in file {bad_grain[1]}: {bad_grain[2]}\")\n",
     "\n",
     "    return grains_dictionary\n",
     "\n",
