Add all defects to the dataframe

--- a/picoz-exploration.ipynb
+++ b/picoz-exploration.ipynb
@@ -757,6 +757,8 @@
     "                \"num_coinciding_defects\": total_num_coinciding_defects,\n",
     "                \"mean_curvature_defect_length\": mean_curvature_defect_length,\n",
     "                \"mean_height_defect_length\": mean_height_defect_length,\n",
+    "                \"height_defects_lengths\": height_defects_lengths,\n",
+    "                \"curvature_defects_lengths\": curvature_defects_lengths,\n",
     "            }\n",
     "        )\n",
     "\n",
@@ -982,7 +984,7 @@
     ")\n",
     "plt.xlabel(\"Dose (Gy)\")\n",
     "plt.ylabel(\"Mean Curvature Defect Length (nm)\")\n",
-    "plt.show()"
+    "plt.show()\n"
    ]
   },
   {
