Add gap distance counting to defect distance counting code

--- a/picoz-exploration.ipynb
+++ b/picoz-exploration.ipynb
@@ -622,21 +622,31 @@
     "    return new_grains_dictionary\n",
     "\n",
     "\n",
-    "def calculate_defects_lengths(\n",
+    "def calculate_defects_and_gap_lengths(\n",
     "    points_distance_to_previous_nm: npt.NDArray[np.float64],\n",
     "    defects_bool: npt.NDArray[np.bool_],\n",
-    ") -> npt.NDArray[np.float64]:\n",
+    ") -> tuple[npt.NDArray[np.float64], npt.NDArray[np.float64]]:\n",
     "    \"\"\"Calculate the lengths of defects\"\"\"\n",
     "    defect_lengths = []\n",
+    "    gap_lengths = []\n",
+    "\n",
+    "    current_gap_length = 0.0\n",
     "    current_defect_length = 0.0\n",
     "    for i in range(len(defects_bool)):\n",
     "\n",
     "        if defects_bool[i]:\n",
     "            current_defect_length += points_distance_to_previous_nm[i]\n",
+    "            if current_gap_length > 0:\n",
+    "                # End the current gap\n",
+    "                gap_lengths.append(current_gap_length)\n",
+    "                current_gap_length = 0.0\n",
     "        else:\n",
     "            if current_defect_length > 0:\n",
     "                defect_lengths.append(current_defect_length)\n",
     "                current_defect_length = 0.0\n",
+    "            # Continue the gap\n",
+    "            current_gap_length += points_distance_to_previous_nm[i]\n",
+    "\n",
     "    # if the last defect is still open, check if it's connected to the start defect and combine if necessary\n",
     "    if current_defect_length > 0:\n",
     "        if defects_bool[0]:\n",
@@ -645,6 +655,14 @@
     "        else:\n",
     "            # End is not connected to start, so add as a new defect\n",
     "            defect_lengths.append(current_defect_length)\n",
+    "    else:\n",
+    "        # the last gap is stil open.\n",
+    "        # If the first point is also a gap, we can combine it with the last gap\n",
+    "        if current_gap_length > 0 and not defects_bool[0]:\n",
+    "            gap_lengths[0] += current_gap_length\n",
+    "        else:\n",
+    "            gap_lengths.append(current_gap_length)\n",
+    "\n",
     "    return np.array(defect_lengths)\n",
     "\n",
     "\n",
@@ -984,7 +1002,7 @@
     ")\n",
     "plt.xlabel(\"Dose (Gy)\")\n",
     "plt.ylabel(\"Mean Curvature Defect Length (nm)\")\n",
-    "plt.show()\n"
+    "plt.show()"
    ]
   },
   {
