Save defect gap distances too

--- a/picoz-exploration.ipynb
+++ b/picoz-exploration.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "a0d65b5b",
    "metadata": {},
    "outputs": [],
@@ -10,6 +10,7 @@
     "import pickle\n",
     "from pathlib import Path\n",
     "import re\n",
+    "import pytest\n",
     "\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
@@ -362,7 +363,19 @@
    "execution_count": null,
    "id": "82a3c7b2",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'postprocess_dir' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[1], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m defect_stats_dir \u001b[38;5;241m=\u001b[39m \u001b[43mpostprocess_dir\u001b[49m \u001b[38;5;241m/\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mdefect_stats\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m      2\u001b[0m defect_stats_dir\u001b[38;5;241m.\u001b[39mmkdir(exist_ok\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m)\n\u001b[1;32m      5\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21mgrains_dictionary_resample_points\u001b[39m(\n\u001b[1;32m      6\u001b[0m     grains_dictionary: \u001b[38;5;28mdict\u001b[39m,\n\u001b[1;32m      7\u001b[0m     interval_nm: \u001b[38;5;28mfloat\u001b[39m \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m2.0\u001b[39m,\n\u001b[1;32m      8\u001b[0m     total_index_to_stop_at: \u001b[38;5;28mint\u001b[39m \u001b[38;5;241m|\u001b[39m \u001b[38;5;28;01mNone\u001b[39;00m \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mNone\u001b[39;00m,\n\u001b[1;32m      9\u001b[0m     curvature_average_window_nm: \u001b[38;5;28mfloat\u001b[39m \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m10.0\u001b[39m,\n\u001b[1;32m     10\u001b[0m ) \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m>\u001b[39m \u001b[38;5;28mdict\u001b[39m:\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'postprocess_dir' is not defined"
+     ]
+    }
+   ],
    "source": [
     "defect_stats_dir = postprocess_dir / \"defect_stats\"\n",
     "defect_stats_dir.mkdir(exist_ok=True)\n",
@@ -663,7 +676,7 @@
     "        else:\n",
     "            gap_lengths.append(current_gap_length)\n",
     "\n",
-    "    return np.array(defect_lengths)\n",
+    "    return np.array(defect_lengths), np.array(gap_lengths)\n",
     "\n",
     "\n",
     "def find_defects_in_height_and_curvature(\n",
@@ -715,17 +728,19 @@
     "            smoothed_curvatures = molecule_data[\"smoothed_curvatures\"]\n",
     "            cumulative_resampled_distances_px = molecule_data[\"cumulative_resampled_distances_px\"]\n",
     "            curvature_defects_bool = molecule_data[\"curvature_defects_bool\"]\n",
-    "            curvature_defects_lengths = calculate_defects_lengths(\n",
+    "            curvature_defects_lengths, curvature_defect_gaps_lengths = calculate_defects_and_gap_lengths(\n",
     "                points_distance_to_previous_nm=molecule_data[\"distances_to_previous_points_nm\"],\n",
     "                defects_bool=curvature_defects_bool,\n",
     "            )\n",
     "            mean_curvature_defect_length = np.mean(curvature_defects_lengths)\n",
+    "            mean_curvature_defect_gap_length = np.mean(curvature_defect_gaps_lengths)\n",
     "            height_defects_bool = molecule_data[\"height_defects_bool\"]\n",
-    "            height_defects_lengths = calculate_defects_lengths(\n",
+    "            height_defects_lengths, height_defect_gaps_lengths = calculate_defects_and_gap_lengths(\n",
     "                points_distance_to_previous_nm=molecule_data[\"distances_to_previous_points_nm\"],\n",
     "                defects_bool=height_defects_bool,\n",
     "            )\n",
     "            mean_height_defect_length = np.mean(height_defects_lengths)\n",
+    "            mean_height_defect_gap_length = np.mean(height_defect_gaps_lengths)\n",
     "            curvature_defects_indexes = np.where(curvature_defects_bool)[0]\n",
     "            height_defects_indexes = np.where(height_defects_bool)[0]\n",
     "\n",
@@ -777,6 +792,10 @@
     "                \"mean_height_defect_length\": mean_height_defect_length,\n",
     "                \"height_defects_lengths\": height_defects_lengths,\n",
     "                \"curvature_defects_lengths\": curvature_defects_lengths,\n",
+    "                \"mean_curvature_defect_gap_length\": mean_curvature_defect_gap_length,\n",
+    "                \"mean_height_defect_gap_length\": mean_height_defect_gap_length,\n",
+    "                \"curvature_defect_gaps_lengths\": curvature_defect_gaps_lengths,\n",
+    "                \"height_defect_gaps_lengths\": height_defect_gaps_lengths,\n",
     "            }\n",
     "        )\n",
     "\n",
