[WIP] add test for defect and gap lengths

--- a/picoz-exploration.ipynb
+++ b/picoz-exploration.ipynb
@@ -678,6 +678,15 @@
     "\n",
     "    return np.array(defect_lengths), np.array(gap_lengths)\n",
     "\n",
+    "@pytest.mark.parametrize(\n",
+    "    (\"defects_bool\", \"expected_defect_lengths\", \"expected_defect_lengths\", \"expected_gap_lengths\"),\n",
+    "    [\n",
+    "        pytest.param(\n",
+    "            \n",
+    "        )\n",
+    "    ]\"\n",
+    ")\n",
+    "\n",
     "\n",
     "def find_defects_in_height_and_curvature(\n",
     "    grains_dictionary: dict,\n",
