--- a/picoz-exploration.ipynb
+++ b/picoz-exploration.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "a0d65b5b",
    "metadata": {},
    "outputs": [],
@@ -22,6 +22,7 @@
     "\n",
     "from topostats.tracing.splining import resample_points_regular_interval\n",
     "from topostats.measure.curvature import discrete_angle_difference_per_nm_circular\n",
+    "from topostats.damage.damage import calculate_defects_and_gap_lengths\n",
     "\n",
     "import numpy.typing as npt\n",
     "import numpy as np\n",
@@ -363,19 +364,7 @@
    "execution_count": null,
    "id": "82a3c7b2",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'postprocess_dir' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[1], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m defect_stats_dir \u001b[38;5;241m=\u001b[39m \u001b[43mpostprocess_dir\u001b[49m \u001b[38;5;241m/\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mdefect_stats\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m      2\u001b[0m defect_stats_dir\u001b[38;5;241m.\u001b[39mmkdir(exist_ok\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m)\n\u001b[1;32m      5\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21mgrains_dictionary_resample_points\u001b[39m(\n\u001b[1;32m      6\u001b[0m     grains_dictionary: \u001b[38;5;28mdict\u001b[39m,\n\u001b[1;32m      7\u001b[0m     interval_nm: \u001b[38;5;28mfloat\u001b[39m \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m2.0\u001b[39m,\n\u001b[1;32m      8\u001b[0m     total_index_to_stop_at: \u001b[38;5;28mint\u001b[39m \u001b[38;5;241m|\u001b[39m \u001b[38;5;28;01mNone\u001b[39;00m \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mNone\u001b[39;00m,\n\u001b[1;32m      9\u001b[0m     curvature_average_window_nm: \u001b[38;5;28mfloat\u001b[39m \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m10.0\u001b[39m,\n\u001b[1;32m     10\u001b[0m ) \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m>\u001b[39m \u001b[38;5;28mdict\u001b[39m:\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'postprocess_dir' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "defect_stats_dir = postprocess_dir / \"defect_stats\"\n",
     "defect_stats_dir.mkdir(exist_ok=True)\n",
@@ -633,59 +622,6 @@
     "        raise ValueError(f\"defect_height_threshold_method {defect_method} not supported\")\n",
     "\n",
     "    return new_grains_dictionary\n",
-    "\n",
-    "\n",
-    "def calculate_defects_and_gap_lengths(\n",
-    "    points_distance_to_previous_nm: npt.NDArray[np.float64],\n",
-    "    defects_bool: npt.NDArray[np.bool_],\n",
-    ") -> tuple[npt.NDArray[np.float64], npt.NDArray[np.float64]]:\n",
-    "    \"\"\"Calculate the lengths of defects\"\"\"\n",
-    "    defect_lengths = []\n",
-    "    gap_lengths = []\n",
-    "\n",
-    "    current_gap_length = 0.0\n",
-    "    current_defect_length = 0.0\n",
-    "    for i in range(len(defects_bool)):\n",
-    "\n",
-    "        if defects_bool[i]:\n",
-    "            current_defect_length += points_distance_to_previous_nm[i]\n",
-    "            if current_gap_length > 0:\n",
-    "                # End the current gap\n",
-    "                gap_lengths.append(current_gap_length)\n",
-    "                current_gap_length = 0.0\n",
-    "        else:\n",
-    "            if current_defect_length > 0:\n",
-    "                defect_lengths.append(current_defect_length)\n",
-    "                current_defect_length = 0.0\n",
-    "            # Continue the gap\n",
-    "            current_gap_length += points_distance_to_previous_nm[i]\n",
-    "\n",
-    "    # if the last defect is still open, check if it's connected to the start defect and combine if necessary\n",
-    "    if current_defect_length > 0:\n",
-    "        if defects_bool[0]:\n",
-    "            # End is connected to start, so combine the lengths into the first defect\n",
-    "            defect_lengths[0] += current_defect_length\n",
-    "        else:\n",
-    "            # End is not connected to start, so add as a new defect\n",
-    "            defect_lengths.append(current_defect_length)\n",
-    "    else:\n",
-    "        # the last gap is stil open.\n",
-    "        # If the first point is also a gap, we can combine it with the last gap\n",
-    "        if current_gap_length > 0 and not defects_bool[0]:\n",
-    "            gap_lengths[0] += current_gap_length\n",
-    "        else:\n",
-    "            gap_lengths.append(current_gap_length)\n",
-    "\n",
-    "    return np.array(defect_lengths), np.array(gap_lengths)\n",
-    "\n",
-    "@pytest.mark.parametrize(\n",
-    "    (\"defects_bool\", \"expected_defect_lengths\", \"expected_defect_lengths\", \"expected_gap_lengths\"),\n",
-    "    [\n",
-    "        pytest.param(\n",
-    "            \n",
-    "        )\n",
-    "    ]\"\n",
-    ")\n",
     "\n",
     "\n",
     "def find_defects_in_height_and_curvature(\n",
