[WIP]: plotting of defect lengths (difficult due to dataframe holding arrays)

--- a/picoz-exploration.ipynb
+++ b/picoz-exploration.ipynb
@@ -966,7 +966,43 @@
     ")\n",
     "plt.xlabel(\"Dose (Gy)\")\n",
     "plt.ylabel(\"Mean Curvature Defect Length (nm)\")\n",
-    "plt.show()"
+    "plt.show()\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d88871d3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# histogram of all defect lengths\n",
+    "height_defect_lengths = defect_stats_df[\"height_defects_lengths\"]\n",
+    "# grab the non empty arrays in this series\n",
+    "# iterate over the height_defect_lengths series\n",
+    "height_defect_lengths_array = np.array([])\n",
+    "for  i, length_array in enumerate(height_defect_lengths):\n",
+    "    # print(length_array)\n",
+    "    # print(type(length_array))\n",
+    "    assert isinstance(length_array, np.ndarray), f\"length_array {i} is not a numpy array\"\n",
+    "    # if shape is () then cast to float\n",
+    "    if length_array.shape == ():\n",
+    "        length_array = np.array([float(length_array)])\n",
+    "\n",
+    "    if len(length_array) > 0:\n",
+    "        height_defect_lengths_array = np.concatenate((height_defect_lengths_array, length_array))\n",
+    "\n",
+    "# plot stripplot with boxes of height defect lengths\n",
+    "plt.figure(figsize=(10, 5))\n",
+    "sns.stripplot(data=height_defect_lengths_array, color=\"black\", alpha=0.5)\n",
+    "sns.boxplot(\n",
+    "    data=height_defect_lengths_array,\n",
+    "    color=\"lightgrey\",\n",
+    ")\n",
+    "plt.xlabel(\"Height Defect Lengths (nm)\")\n",
+    "plt.title(\"Height Defect Lengths\")\n",
+    "plt.show()\n"
    ]
   },
   {
